resolved asset media size on tablet

--- a/src/app/feedback-add-edit/feedback-add-edit.page.scss
+++ b/src/app/feedback-add-edit/feedback-add-edit.page.scss
@@ -4,7 +4,6 @@ $big-fab-list-width: calc(#{$big-fab-width} - 2 * #{$big-fab-list-left-padding})
 $big-fab-list-margin-bottom: calc(#{$big-fab-width} + 10px);
 $videocam-font-size: 50px;
 
-
 .video-icon {
   height: 70vh;
   width: auto;
@@ -79,4 +78,15 @@ $videocam-font-size: 50px;
 
 .buttons {
   margin-top: 30px;
+}
+
+@media (orientation: landscape) {
+  form {
+    height: 100%;
+
+    .top-file {
+      height: 100%;
+      display: block;
+    }
+  }
 }
