--- a/src/components/assetview/assetview.page.scss
+++ b/src/components/assetview/assetview.page.scss
@@ -20,7 +20,7 @@
             object-fit: contain;
             position: absolute;
             top: 0;
-            height: auto;
+            height: '100%';
         }
     }
 }
